# gaise

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  DockerfileARM  README.md  audit-report.md  model-registry.toml
.claude/: settings.local.json
.claude/agents/: model-audit.md
gaise-api/: Cargo.toml  README.md
gaise-api/src/: lib.rs  main.rs
gaise-chatbot/: Cargo.toml
gaise-chatbot/src/: main.rs
gaise-client/: Cargo.toml  README.md
gaise-client/src/: lib.rs
gaise-core/: Cargo.toml  README.md
gaise-core/src/: lib.rs
gaise-core/src/contracts/: gaise_live_config.rs  gaise_live_event.rs  gaise_live_input.rs  gaise_live_session.rs  mod.rs
gaise-provider-anthropic/: Cargo.toml  README.md
gaise-provider-anthropic/src/: anthropic_client.rs
gaise-provider-anthropic/src/contracts/: models.rs
gaise-provider-anthropic/tests/: mapping_tests.rs
gaise-provider-bedrock/: Cargo.toml  README.md
gaise-provider-bedrock/tests/: mapping_tests.rs
gaise-provider-gemini/: Cargo.toml  README.md
gaise-provider-gemini/src/: gemini_client.rs  gemini_live_client.rs  lib.rs
gaise-provider-gemini/src/contracts/: live_models.rs  mod.rs  models.rs
gaise-provider-gemini/tests/: live_mapping_tests.rs  mapping_tests.rs
gaise-provider-ollama/: Cargo.toml  README.md
gaise-provider-ollama/tests/: mapping_tests.rs
gaise-provider-openai/: Cargo.toml  README.md
gaise-provider-openai/src/: lib.rs  openai_client.rs  openai_live_client.rs
gaise-provider-openai/src/contracts/: mod.rs  models.rs  realtime_models.rs
gaise-provider-openai/tests/: live_mapping_tests.rs  mapping_tests.rs
gaise-provider-vertexai/: Cargo.toml  README.md
gaise-provider-vertexai/src/: vertexai_client.rs  vertexai_client_threaded.rs
gaise-provider-vertexai/src/contracts/: models.rs  service_account.rs
gaise-provider-vertexai/tests/: mapping_tests.rs
