[package]
name = "gaise-chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
gaise-core = { path = "../gaise-core" }
gaise-client = { path = "../gaise-client" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_io = "0.1"
indicatif = "0.17"

[features]
default = ["ollama"]
ollama = ["gaise-client/ollama"]
