[package]
name = "gaise"
description = "Core trait and contracts for GAISe — a unified GenAI provider abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "gaise_core"
path = "src/lib.rs"

[dependencies]
serde_json.workspace = true
serde.workspace = true
serde_bytes.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["sync"] }
mockall = "0.14"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
