[package]
name = "gaise-provider-anthropic"
description = "Anthropic Claude provider for GAISe — Messages API with extended thinking"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
gaise-core.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
futures-util.workspace = true
base64.workspace = true
reqwest = { version = "0.13", features = ["stream", "json"] }
