[package]
name = "gaise-provider-bedrock"
description = "AWS Bedrock provider for GAISe — Claude and other models via AWS Bedrock Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gaise-core.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures-util.workspace = true
base64.workspace = true
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.0"
aws-smithy-types = "1.0"
bytes = "1.0"
async-stream = "0.3"
