[package]
name = "gaise-provider-gemini"
description = "Google Gemini provider for GAISe — generateContent, streaming, and embeddings via v1beta API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gaise-core.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures-util.workspace = true
base64.workspace = true
reqwest = { version = "0.12", features = ["stream", "json"] }
