[package]
name = "gaise-provider-gemini"
description = "Google Gemini provider for GAISe — generateContent, streaming, and embeddings via v1beta API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
live = ["dep:tokio-tungstenite", "dep:tokio-stream", "dep:url"]

[dependencies]
gaise-core.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures-util.workspace = true
base64.workspace = true
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }
tokio-stream = { version = "0.1", optional = true }
url = { version = "2", optional = true }
