[package]
name = "gaise-provider-ollama"
description = "Ollama provider for GAISe — local LLM inference via Ollama API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gaise-core.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_bytes.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures-util.workspace = true
base64.workspace = true
reqwest = { version = "0.12", features = ["stream", "json"] }
