[package]
name = "gaise-provider-vertexai"
description = "Google Vertex AI provider for GAISe — Gemini models via Vertex AI endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
gaise-core.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_bytes.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures-util.workspace = true
base64.workspace = true
reqwest = { version = "0.12", features = ["stream"] }
chrono = "0.4"
jsonwebtoken = "9"
